add page to show all events

--- a/backend/logic/longshanks/html/oz-magical-mystery-tour-tourney.html
+++ b/backend/logic/longshanks/html/oz-magical-mystery-tour-tourney.html
@@ -480,12 +480,12 @@
 </div>
 <span class='mobile'><div class="art">
 	<div class="column">
-		<img src="/systems/malifaux/art/breachside09.jpg" />
+		<img src="/systems/malifaux/art/breachside03.jpg" />
 	</div>
 	<div class="column">
-		<a href='/help/' target="_blank"><img src="/images/art/action/help.png" /></a>	</div>
+		<img src="/systems/malifaux/art/breachside02.jpg" />	</div>
 	<div class="column">
-		<img src="/systems/malifaux/art/other_side_abyssinia.jpg" />
+		<img src="/systems/malifaux/art/breachside15.jpg" />
 	</div>
 </div>
 </span>
@@ -748,7 +748,7 @@
 			</div>
 
 			<div class="buttons">
-				<a class="button" alt="cookie_agree" onclick="document.cookie='cookie_permission=TRUE; expires=Fri, 02 Jan 2026 00:00:00 1767350265UTCC; path=/; domain=longshanks.org';pop_close('cookie_permission');">I understand</a>
+				<a class="button" alt="cookie_agree" onclick="document.cookie='cookie_permission=TRUE; expires=Fri, 02 Jan 2026 00:00:00 1767351138UTCC; path=/; domain=longshanks.org';pop_close('cookie_permission');">I understand</a>
 			</div>
 		</div>
 	</div>
