--- a/backend/report.html
+++ b/backend/report.html
@@ -826,7 +826,8 @@ padding-left: 40px;
 <option value="2025-12-30 08:55:37">2025-12-30 08:55:37</option>
 <option value="2025-12-30 09:02:28">2025-12-30 09:02:28</option>
 <option value="2025-12-30 09:06:11">2025-12-30 09:06:11</option>
-<option value="2025-12-30 09:06:33" selected="true">2025-12-30 09:06:33</option>
+<option value="2025-12-30 09:06:33">2025-12-30 09:06:33</option>
+<option value="2025-12-30 10:10:59" selected="true">2025-12-30 10:10:59</option>
 </select>
 </div>
 <div class="page 2025-12-20 22:07:28">
@@ -8292,6 +8293,423 @@ You can read more about the migrate report <a href="https://rd.gt/3okl9tM">here<
 </div>
 </div>
 <div id="CodeAnalysisReport_5_2025-12-3009:06:33" class="tabcontent">
+<!--
+
+    Copyright (C) Red Gate Software Ltd 2010-2023
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+<div class="holdingTab">
+    <div class='summaryDiv summaryNote'>
+        <div class='summaryDivContent'>
+            <span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span>
+            <span class='summaryText'>Explore how to get this report and what it can do for you.</span></div>
+        <div class="summaryRight" ><a href='https://rd.gt/3ornhzX'>Learn More</a></div>
+    </div>
+
+    <div class="upgradeContent">
+        <svg fill="none" width="38" height="38">
+            <use href="#document"/>
+        </svg>
+
+        <p>No code analysis report available yet</p>
+        <button class="clickable learnMoreGrayButton fancyButton" onclick="location.href='https://rd.gt/3ornhzX'">Learn more</button>
+    </div>
+</div>
+</div>
+</div>
+<div class="page 2025-12-30 10:10:59">
+<div class="tabs">
+<button class="tab" onclick="onTabClick(event, 'Dashboard_0_2025-12-3010:10:59','dashboard-0_2025-12-30 10:10:59')" id="dashboard-0_2025-12-30 10:10:59"><h4>Dashboard</h4></button>
+<button class="tab" onclick="onTabClick(event, 'Migrationreport_1_2025-12-3010:10:59','migrate-1_2025-12-30 10:10:59')" id="migrate-1_2025-12-30 10:10:59"><h4>Migration report</h4></button>
+<button class="tab" onclick="onTabClick(event, 'ChangeReport_2_2025-12-3010:10:59','changes-2_2025-12-30 10:10:59')" id="changes-2_2025-12-30 10:10:59"><h4>Change Report</h4></button>
+<button class="tab" onclick="onTabClick(event, 'DriftReport_3_2025-12-3010:10:59','drift-3_2025-12-30 10:10:59')" id="drift-3_2025-12-30 10:10:59"><h4>Drift Report</h4></button>
+<button class="tab" onclick="onTabClick(event, 'DryRunReport_4_2025-12-3010:10:59','dryrun-4_2025-12-30 10:10:59')" id="dryrun-4_2025-12-30 10:10:59"><h4>Dry Run Report</h4></button>
+<button class="tab" onclick="onTabClick(event, 'CodeAnalysisReport_5_2025-12-3010:10:59','code-5_2025-12-30 10:10:59')" id="code-5_2025-12-30 10:10:59"><h4>Code Analysis Report</h4></button>
+</div><div id="Dashboard_0_2025-12-3010:10:59" class="tabcontent">
+<div class='dashboardContainer'><div class='dashboardSummaryGroup'><h5>Migration report</h5><div class='summaryDiv scGood'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span><span class='summaryText'>Database version: 028</span></div></div><div class='summaryDiv scGood'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#checkFilled"/></svg></span><span class='summaryText'>28 scripts migrated</span></div></div><div class='summaryDiv scNote'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#clockOutlined"/></svg></span><span class='summaryText'>Execution Time: 00:00.281s</span></div></div><button class='clickable inspectButton fancyButton' onclick="onTabClick(event, 'Migrationreport_1_2025-12-3010:10:59','migrate-1_2025-12-30 10:10:59')">Inspect Migration report</button></div></div></div>
+<div id="Migrationreport_1_2025-12-3010:10:59" class="tabcontent">
+<div class='summaryHeader'><div class='summaryDiv scGood'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span><span class='summaryText'>Database version: 028</span></div></div><div class='summaryDiv scGood'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#checkFilled"/></svg></span><span class='summaryText'>28 scripts migrated</span></div></div><div class='summaryDiv scNote'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#clockOutlined"/></svg></span><span class='summaryText'>Execution Time: 00:00.281s</span></div></div><div class='summaryDiv summaryNote'><div class='summaryDivContent'><span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span><span class='summaryText'><!--
+
+    Copyright (C) Red Gate Software Ltd 2010-2023
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+You can read more about the migrate report <a href="https://rd.gt/3okl9tM">here</a>
+</span></div></div></div><div>  <table class="tabulardata">
+    <thead>
+       <tr>
+       <th>Version</th>
+       <th>Description</th>
+       <th>Category</th>
+       <th>Type</th>
+       <th>Filepath</th>
+       <th>ExecutionTime</th>
+       </tr>
+       </thead>
+    <tbody>
+    <tr>
+      <td>001</td>
+      <td>initial-tables</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V001__initial-tables.sql</td>
+      <td>00:00.048s</td>
+    </tr>
+    <tr>
+      <td>002</td>
+      <td>factions</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V002__factions.sql</td>
+      <td>00:00.010s</td>
+    </tr>
+    <tr>
+      <td>003</td>
+      <td>remove-venues-add-tourney-columns</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V003__remove-venues-add-tourney-columns.sql</td>
+      <td>00:00.007s</td>
+    </tr>
+    <tr>
+      <td>004</td>
+      <td>remove-poorly-named-column</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V004__remove-poorly-named-column.sql</td>
+      <td>00:00.005s</td>
+    </tr>
+    <tr>
+      <td>005</td>
+      <td>change date type in tourney</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V005__change date type in tourney.sql</td>
+      <td>00:00.002s</td>
+    </tr>
+    <tr>
+      <td>006</td>
+      <td>add-longshanks-id-field</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V006__add-longshanks-id-field.sql</td>
+      <td>00:00.007s</td>
+    </tr>
+    <tr>
+      <td>007</td>
+      <td>add-longshanks-player-name</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V007__add-longshanks-player-name.sql</td>
+      <td>00:00.002s</td>
+    </tr>
+    <tr>
+      <td>008</td>
+      <td>make-longshanks-player-id-unique</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V008__make-longshanks-player-id-unique.sql</td>
+      <td>00:00.005s</td>
+    </tr>
+    <tr>
+      <td>009</td>
+      <td>let-player-discord-be-null</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V009__let-player-discord-be-null.sql</td>
+      <td>00:00.002s</td>
+    </tr>
+    <tr>
+      <td>010</td>
+      <td>let-discord-username-be-null</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V010__let-discord-username-be-null.sql</td>
+      <td>00:00.009s</td>
+    </tr>
+    <tr>
+      <td>011</td>
+      <td>add-facton-data</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V011__add-facton-data.sql</td>
+      <td>00:00.004s</td>
+    </tr>
+    <tr>
+      <td>012</td>
+      <td>points-stuff</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V012__points-stuff.sql</td>
+      <td>00:00.013s</td>
+    </tr>
+    <tr>
+      <td>013</td>
+      <td>make-level-code-mandatory-with-default</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V013__make-level-code-mandatory-with-default.sql</td>
+      <td>00:00.003s</td>
+    </tr>
+    <tr>
+      <td>014</td>
+      <td>fix-default</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V014__fix-default.sql</td>
+      <td>00:00.003s</td>
+    </tr>
+    <tr>
+      <td>015</td>
+      <td>make-points-mandatory</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V015__make-points-mandatory.sql</td>
+      <td>00:00.003s</td>
+    </tr>
+    <tr>
+      <td>016</td>
+      <td>add-fields-to-tourney</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V016__add-fields-to-tourney.sql</td>
+      <td>00:00.004s</td>
+    </tr>
+    <tr>
+      <td>017</td>
+      <td>add ranking tables</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V017__add_ranking_tables.sql</td>
+      <td>00:00.041s</td>
+    </tr>
+    <tr>
+      <td>018</td>
+      <td>change type table</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V018__change_type_table.sql</td>
+      <td>00:00.040s</td>
+    </tr>
+    <tr>
+      <td>019</td>
+      <td>make-date-mandatory</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V019__make-date-mandatory.sql</td>
+      <td>00:00.003s</td>
+    </tr>
+    <tr>
+      <td>020</td>
+      <td>tweak ranking schema</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V020__tweak_ranking_schema.sql</td>
+      <td>00:00.004s</td>
+    </tr>
+    <tr>
+      <td>021</td>
+      <td>add constraint to ranking snapshot</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V021__add_constraint_to_ranking_snapshot.sql</td>
+      <td>00:00.006s</td>
+    </tr>
+    <tr>
+      <td>022</td>
+      <td>enhanve faction table</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V022__enhanve_faction_table.sql</td>
+      <td>00:00.004s</td>
+    </tr>
+    <tr>
+      <td>023</td>
+      <td>make faction field mandatory</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V023__make_faction_field_mandatory.sql</td>
+      <td>00:00.005s</td>
+    </tr>
+    <tr>
+      <td>024</td>
+      <td>make points float</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V024__make_points_float.sql</td>
+      <td>00:00.027s</td>
+    </tr>
+    <tr>
+      <td>025</td>
+      <td>add faction code field</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V025__add_faction_code_field.sql</td>
+      <td>00:00.015s</td>
+    </tr>
+    <tr>
+      <td>026</td>
+      <td>ranking-types</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V026__ranking-types.sql</td>
+      <td>00:00.004s</td>
+    </tr>
+    <tr>
+      <td>027</td>
+      <td>tweak ranking types</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V027__tweak_ranking_types.sql</td>
+      <td>00:00.002s</td>
+    </tr>
+    <tr>
+      <td>028</td>
+      <td>store-number-of-players-in-tourney</td>
+      <td>Versioned</td>
+      <td>SQL</td>
+      <td>V028__store-number-of-players-in-tourney.sql</td>
+      <td>00:00.003s</td>
+    </tr>
+    </tbody>
+  </table>
+</div>
+</div>
+<div id="ChangeReport_2_2025-12-3010:10:59" class="tabcontent">
+<!--
+
+    Copyright (C) Red Gate Software Ltd 2010-2023
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+<div class="holdingTab">
+    <div class='summaryDiv summaryNote'>
+        <div class='summaryDivContent'>
+            <span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span>
+            <span class='summaryText'>Explore how to get this report and what it can do for you.</span></div>
+        <div class="summaryRight" ><a href='https://rd.gt/43G0r7G'>Learn More</a></div>
+    </div>
+
+    <div class="upgradeContent">
+        <svg width="410" height="206" viewBox="0 0 410 206" fill="none">
+            <use href="#upgrade"/>
+        </svg>
+
+        <p>Change reporting is not included in your current Flyway license. Upgrade to Flyway Enterprise to gain access.</p>
+        <button class="clickable upgradeButton fancyButton" onclick="location.href='https://rd.gt/3ytplJq'">Trial Flyway Enterprise</button>
+        <button class="clickable learnMoreGrayButton fancyButton" onclick="location.href='https://rd.gt/43G0r7G'">Learn more</button>
+    </div>
+</div>
+</div>
+<div id="DriftReport_3_2025-12-3010:10:59" class="tabcontent">
+<!--
+
+    Copyright (C) Red Gate Software Ltd 2010-2023
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+<div class="holdingTab">
+    <div class='summaryDiv summaryNote'>
+        <div class='summaryDivContent'>
+            <span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span>
+            <span class='summaryText'>Explore how to get this report and what it can do for you.</span></div>
+        <div class="summaryRight" ><a href='https://rd.gt/40ikqXf'>Learn More</a></div>
+    </div>
+
+    <div class="upgradeContent">
+        <svg width="410" height="206" viewBox="0 0 410 206" fill="none">
+            <use href="#upgrade"/>
+        </svg>
+
+        <p>Drift reporting is not included in your current Flyway license. Upgrade to Flyway Enterprise to gain access.</p>
+        <button class="clickable upgradeButton fancyButton" onclick="location.href='https://rd.gt/3ytplJq'">Trial Flyway Enterprise</button>
+        <button class="clickable learnMoreGrayButton fancyButton" onclick="location.href='https://rd.gt/40ikqXf'">Learn more</button>
+    </div>
+</div>
+</div>
+<div id="DryRunReport_4_2025-12-3010:10:59" class="tabcontent">
+<!--
+
+    Copyright (C) Red Gate Software Ltd 2010-2023
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+            http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
+-->
+<div class="holdingTab">
+    <div class='summaryDiv summaryNote'>
+        <div class='summaryDivContent'>
+            <span class='summaryIcon'><svg fill="none"><use href="#infoOutlined"/></svg></span>
+            <span class='summaryText'>Explore how to get this report and what it can do for you.</span></div>
+        <div class="summaryRight" ><a href='https://rd.gt/3KSXkAW'>Learn More</a></div>
+    </div>
+
+    <div class="upgradeContent">
+        <svg width="410" height="206" viewBox="0 0 410 206" fill="none">
+            <use href="#upgrade"/>
+        </svg>
+
+        <p>Dry Run is not included in your current Flyway license. Upgrade to Flyway Teams or Enterprise to gain access.</p>
+        <button class="clickable upgradeButton fancyButton" onclick="location.href='https://rd.gt/3ytplJq'">Trial Flyway Teams or Enterprise</button>
+        <button class="clickable learnMoreGrayButton fancyButton" onclick="location.href='https://rd.gt/3KSXkAW'">Learn more</button>
+    </div>
+</div>
+</div>
+<div id="CodeAnalysisReport_5_2025-12-3010:10:59" class="tabcontent">
 <!--
 
     Copyright (C) Red Gate Software Ltd 2010-2023
